force-app/main/default/objects/Tools__c/Tools__c.object-meta.xml
<CustomObject>
    <label>Tool</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Tools Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>