force-app/main/default/objects/Tools__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>