force-app/main/default/objects/Tools__c/fields/Tool_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Tool_Name_2__c</fullName>
    <label>Tool Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>