force-app/main/default/objects/Tools__c/fields/Tools_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Tools_Quantity_2__c</fullName>
    <label>Tools Quantity 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>