force-app/main/default/objects/Tools__c/validationRules/Tool.validationRule-meta.xml
<ValidationRule>
    <fullName>Tool</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    AND(
        Tools_Quantity_1__c &gt;= 0
    )
)</errorConditionFormula>
    <errorMessage>Value must be greater than 0.</errorMessage>
</ValidationRule>