force-app/main/default/objects/Tools__c/validationRules/Tool4.validationRule-meta.xml
<ValidationRule>
    <fullName>Tool4</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
AND(
Tools_Quantity_4__c &gt;= 0
)
)</errorConditionFormula>
    <errorMessage>Value must be greater than 0.</errorMessage>
</ValidationRule>